# reBot_Arm

./: .gitignore  EXPERIMENTS.md  README.md  pyproject.toml
arm/: __init__.py  config.py  controller.py  safety.py
configs/: gravity_planar.json  gravity_urdf.json  joint_config.yaml  zero_calib.json
deploy/: accelerate_deepspeed_zero2_4gpu.yaml  accelerate_deepspeed_zero3_4gpu.yaml  accelerate_fsdp_4gpu.yaml  requirements-dp.txt  run_test2.sh  show_loss.sh
outputs/: gravity_calib_20260621_230229.csv  gravity_calib_20260621_230302.csv  gravity_calib_20260621_230416.csv  gravity_calib_20260621_232754.csv  gravity_calib_20260621_232941.csv  gravity_calib_20260621_233033.csv  gravity_calib_20260621_233129.csv  gravity_calib_20260621_234805.csv  gravity_calib_20260621_234920.csv  gravity_calib_20260622_002020.csv  gravity_calib_20260622_002108.csv  gravity_calib_20260622_002124.csv  gravity_calib_20260622_002220.csv  gravity_calib_20260622_002257.csv  gravity_calib_20260622_152942.csv  gravity_calib_20260622_153058.csv  gravity_calib_20260622_153134.csv  gravity_calib_20260622_153359.csv  gravity_calib_20260622_153501.csv  gravity_calib_20260622_153645.csv  gravity_calib_20260622_153821.csv  gravity_calib_20260622_153850.csv  gravity_calib_20260622_153924.csv  gravity_calib_20260622_153940.csv  gravity_calib_20260622_154012.csv  gravity_calib_20260622_154054.csv  gravity_calib_20260630_162607.csv  motor_params_20260610_151211.txt  range_j1_20260610_164708.csv  range_j2_20260610_164119.csv  range_j3_20260610_163522.csv  range_j4_20260610_162857.csv  range_j5_20260610_162434.csv  range_j6_20260610_161753.csv  range_j7_20260610_154517.csv  range_j7_20260610_154923.csv  range_j7_20260610_160511.csv  range_j7_20260610_161231.csv  zero_poses.csv
scripts/: calib_gravity_sweep.py  calib_zero_poses.py  camera_utils.py  characterize_range.py  convert_to_lerobot.py  diag_lock.py  dry_run.py  eval_ckpt_loss.py  eval_dp.py  fit_gravity.py  fit_gravity_coupled.py  fit_gravity_planar.py  fit_gravity_urdf.py  fit_zero_mass.py  fit_zero_sweep.py  fix_dm_scale.py  gravity_float_test.py  read_hold_torque.py  read_leader.py  read_motor_params.py  record_demo.py  relabel_grasp.py  reset_arm.py  sanity_walk.py  set_joint_zero.py  sync_to_server.sh  teleop.py  train_dp.py  train_vla.py  visualize_attention.py
tests/: conftest.py  test_config.py  test_controller.py  test_safety.py
