[project]
name = "rebot-arm"
version = "0.1.0"
description = "Python wrapper for Seeed reBot 7-DOF arm via motorbridge (Damiao DM-USB2FDCAN), with leader-arm teleop"
requires-python = ">=3.10"
dependencies = [
    "motorbridge>=0.4.5",
    "pyyaml>=6.0",
    # Leader arm 102 (Fashion Star servos) — used by scripts/teleop.py
    "fashionstar-uart-sdk>=1.3",
    "motorbridge-smart-servo>=0.0.4",
    # Demo recording — used by scripts/record_demo.py
    "opencv-python>=4.7",     # C922 capture via cv2.VideoCapture
    "pyrealsense2>=2.55",     # D435 RGB + depth
    "h5py>=3.9",              # episode storage
    "numpy>=1.24",            # arrays (also a motorbridge dep). No <2.0 cap:
                              # arm code works on numpy 2.x, and the merged env
                              # shares lerobot 0.5.1 which requires numpy 2.x.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["arm*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
